--- a/index.html
+++ b/index.html
@@ -33,12 +33,15 @@
         border-bottom: solid #00000033 1px;
     }
     h4 {
-        margin-bottom: 1px
+        margin-bottom: 1px;
+        transition:0.1s;
+        border-radius:6px
     }
     .valid {
     }
     .parsing {
-        background-color: #f55
+        background-color: red;
+        color:white;
     }
     .invalid {
         background-color: orange
@@ -60,8 +63,8 @@
         float:right;
         padding-left:5px;
         padding-right:10px;
+        background-color:#ffefff;
     }
-
     .object[vis=visible] {
         display:default
     }
