Added add button to lists

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <script type="text/javascript" defer="defer" src="test.js"></script>
+  <script type="text/javascript" defer="defer" src="main.js"></script>
   <title>editor</title>
   <style>
     body {
@@ -63,6 +63,7 @@
         float:right;
         padding-left:5px;
         padding-right:10px;
+        padding-bottom:20px;
         background-color:#ffefff;
     }
     .object[vis=visible] {
