--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
     .object[vis=hide] {
         display:none
     }
+    button {
+        width:20px;
+        height:20px
+    }
   </style>
 </head>
 <body>
