Made patterProperties input text slightly shorter

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         border-right:none;
         border-bottom: solid #00000033 1px;
     }
+    input.reg_input {
+        width: 7em;
+    }
     h4 {
         margin-bottom: 1px;
         transition:0.1s;
