Minor fixes to ui

--- a/index.html
+++ b/index.html
@@ -11,19 +11,36 @@
         margin-left: 0px;
         margin-top: 5px
     }
-    /* li { */
-    /*     margin-top:0px */
-    /* } */
     #main > .object {
         margin-left: 0px
     }
+    .validators {
+
+    }
     .validator > .object {
-        margin-left: 0px
+        margin-top:50px;
+        margin-left: 0px;
     }
     .object {
         margin-left: 20px
     }
-    input {
+    .header {
+        width: 100%;
+        background-color:transparent;
+        border-radius: 20px;
+        position:fixed;
+    }
+    .searchbar:focus {
+        outline:none
+    }
+    .searchbar {
+        margin: auto;
+        width: 50%;
+        border-radius:20px;
+        border: 1px solid green;
+        padding: 10px;
+    }
+    .content input {
         background-color: transparent;
         width: 10em;
         margin:1px;
