Added simple static server and moved some stuff around

--- a/ui/validator/validator.html
+++ b/ui/validator/validator.html
@@ -15,7 +15,8 @@
         margin-left: 0px
     }
     .validators {
-
+        overflow-x:scroll;
+        white-space: nowrap;
     }
     .validator > .object {
         margin-top:50px;
@@ -35,6 +36,7 @@
     }
     .searchbar {
         margin: auto;
+        margin-left:25%;
         width: 50%;
         border-radius:20px;
         border: 1px solid green;
@@ -73,7 +75,7 @@
         color: #ff8
     }
     div.validator {
-        float:left;
+        display:inline-block;
         padding-left:5px;
         padding-right:10px;
         padding-bottom:20px;
