--- a/ui/validator/validator.html
+++ b/ui/validator/validator.html
@@ -59,6 +59,7 @@
         width: 50%;
         border-radius:20px;
         border: 1px solid green;
+        box-shadow: 5px 5px 10px #6664;
         padding: 10px;
     }
     .content input {
@@ -102,6 +103,10 @@
     button {
         width:20px;
         height:20px
+    }
+    button .header {
+        width:50px
+        height:50px
     }
     .hide {
         display:none
