--- a/ui/validator/validator.html
+++ b/ui/validator/validator.html
@@ -9,7 +9,7 @@
     }
     ul.list li .object {
         margin-left: 0px;
-        margin-top: 5px
+        margin-top: 5px;
     }
     #main > .object {
         margin-left: 0px
@@ -21,6 +21,10 @@
     .content {
         z-index:0;
         padding-top:40px
+    }
+    .disabled_input {
+        text-decoration: underline;
+        color:#999
     }
     h1 {
         margin-bottom: 0px;
@@ -108,6 +112,7 @@
         border-left:none;
         border-right:none;
         border-bottom: solid #00000033 1px;
+        outline:none;
     }
     input.reg_input {
         width: 7em;
