Make description hdr bold

--- a/ui/validator/validator.html
+++ b/ui/validator/validator.html
@@ -34,6 +34,9 @@
         position: relative;
         display: inline-block;
     }
+    .description .hdr {
+        font-weight: 600;
+    }
     h4 .description {
         visibility:hidden;
         font-size:13px;
